src/test/deca/syntax/invalid/classe_sans_crochet_2.deca
// Description:
//    on déclare une classe sans le crochet fermant
//
// Resultats:
//   

class A }